# deploiement_api

./: .gitignore  LY_France_01_notebook_preprocessing_modelisation_112024.ipynb  LY_France_API_112024.py  LY_France_Dashboard_112024.py  README.md  dashboard.py  preprocessing.py  pyproject.toml
.github/workflows/: main_scoringapi.yml
test/: unit_test.py
test/data/: data_sample.csv
