[tool.poetry]
name = "deploiement-api"
version = "0.1.0"
description = ""
authors = ["France LY <fly@reseau.free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pandas = "^2.2.3"
numpy = "^2.2.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
streamlit = "^1.41.1"
requests = "^2.32.3"
matplotlib = "^3.10.0"
imblearn = "^0.0"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
